--- a/service-detail.html
+++ b/service-detail.html
@@ -14,9 +14,9 @@
   <meta name="googlebot" content="index, follow" />
 
   <!-- SEO Meta Tags -->
-  <meta name="title" content="Polarhomes | Room Details | Airbnb near JKIA, Nairobi Expressway">
+  <meta name="title" content="Polarhomes | Room Details | Airbnb near Jomo Kenyatta International Airport, Nairobi Expressway">
   <meta name="description" content="Explore detailed information about Polarhomes Airbnb rooms near JKIA Airport and Nairobi Expressway. See features, amenities, prices, and photos of our cozy, secure stays in Syokimau.">
-  <meta name="keywords" content="Polarhomes room details, Airbnb room near JKIA, Syokimau stays, Nairobi short stays, furnished apartment Nairobi, secure Airbnb Syokimau, Nairobi airport room, Polarhomes listing, Syokimau guesthouse, rooms with Wi-Fi JKIA, short term rental Syokimau, budget Airbnb Nairobi, Nairobi Expressway room rental, stylish Airbnb Kenya, Polarhomes amenities, Polarhomes accommodation">
+  <meta name="keywords" content="Polarhomes room details, Airbnb room near Jomo Kenyatta International Airport, Syokimau stays, Nairobi short stays, furnished apartment Nairobi, secure Airbnb Syokimau, Nairobi airport room, Polarhomes listing, Syokimau guesthouse, rooms with Wi-Fi JKIA, short term rental Syokimau, budget Airbnb Nairobi, Nairobi Expressway room rental, stylish Airbnb Kenya, Polarhomes amenities, Polarhomes accommodation">
   <meta name="author" content="Polarhomes">
   <meta name="google-site-verification" content="yUXGjPHC7A9fjFIUkm4W5x2CgiMbsLhPFiMZBKniO_E" />
 
@@ -30,7 +30,7 @@
   <!-- Twitter Meta Tags -->
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:url" content="https://www.polarhomes.org/service-detail.html">
-  <meta name="twitter:title" content="Polarhomes | Room Details | Airbnb JKIA Nairobi">
+  <meta name="twitter:title" content="Polarhomes | Room Details | Airbnb Jomo Kenyatta International Airport Nairobi">
   <meta name="twitter:description" content="See full details of Polarhomes Airbnb rooms near JKIA and Nairobi Expressway. Affordable, clean, and fully equipped stays in Syokimau.">
   <meta name="twitter:image" content="https://www.polarhomes.org/img/logo.jpg">
 
@@ -158,14 +158,14 @@
 <!-- Styles -->
 <style>
         .logo-img {
-        width: 90px; /* Adjust size as needed */
+        width: 90px;
         height: 70px;
     }
 
     .fancy-text {
         font-size: 2rem;
         font-weight: bold;
-        color: gold; /* Luxurious golden color */
+        color: gold; 
         text-transform: uppercase;
         letter-spacing: 2px;
         font-family: "Cinzel", serif;
@@ -209,7 +209,7 @@
     }
   </style>
 
-        <!-- Booking Start -->
+        <!-- Booking Start 
 <div class="container-fluid booking pb-5 wow fadeIn" data-wow-delay="0.1s">
     <div class="container">
         <form action="https://formspree.io/f/xkgryeaa" method="POST">
@@ -254,7 +254,7 @@
         </form>
     </div>
 </div>
-<!-- Booking End -->
+ Booking End -->
 
 
 <body>
