--- a/service.html
+++ b/service.html
@@ -12,24 +12,24 @@
   <meta name="googlebot" content="index, follow" />
 
     <!-- Primary Meta Tags -->
-    <meta name="title" content="Polarhomes | Affordable Airbnb Rooms Near JKIA & Nairobi Expressway">
+    <meta name="title" content="Polarhomes | Affordable Airbnb Rooms Near Jomo Kenyatta International Airport & Nairobi Expressway">
     <meta name="description" content="Book cozy, affordable Airbnb rooms in Syokimau near JKIA and Nairobi Expressway. Safe, stylish, and perfect for short stays.">
-    <meta name="keywords" content="jkia accomodation, accomodation near jkia, polarhomes, Airbnb JKIA, Syokimau Airbnb, rooms near Nairobi Expressway, short stay Nairobi, Makumbi Park apartments, airbnb syokimau, affordable airbnb Nairobi, JKIA lodging, Nairobi airport stay">
+    <meta name="keywords" content="Jomo Kenyatta International Airport accomodation, accomodation near jkia, polarhomes, Airbnb Jomo Kenyatta International Airport, Syokimau Airbnb, rooms near Nairobi Expressway, short stay Nairobi, Makumbi Park apartments, airbnb syokimau, affordable airbnb Nairobi, JKIA lodging, Nairobi airport stay">
     <meta name="author" content="Polarhomes">
     <meta name="google-site-verification" content="yUXGjPHC7A9fjFIUkm4W5x2CgiMbsLhPFiMZBKniO_E" />
 
     <!-- Open Graph / Facebook Meta Tags -->
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://www.polarhomes.org/service">
-    <meta property="og:title" content="Polarhomes | Cozy Airbnb Rooms Near JKIA, Nairobi">
-    <meta property="og:description" content="Affordable, well-furnished rooms in Syokimau near JKIA airport and the Nairobi Expressway. Clean, safe, and ideal for short-term stays.">
+    <meta property="og:title" content="Polarhomes | Cozy Airbnb Rooms Near Jomo Kenyatta International Airport, Nairobi">
+    <meta property="og:description" content="Affordable, well-furnished rooms in Syokimau near Jomo Kenyatta International Airport airport and the Nairobi Expressway. Clean, safe, and ideal for short-term stays.">
     <meta property="og:image" content="https://www.polarhomes.org/img/logo.jpg">
 
     <!-- Twitter Meta Tags -->
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:url" content="https://www.polarhomes.org/service">
-    <meta name="twitter:title" content="Polarhomes | Cozy Airbnb Rooms Near JKIA, Nairobi">
-    <meta name="twitter:description" content="Affordable, stylish apartments and rooms in Syokimau near JKIA. Perfect for travelers and short stays.">
+    <meta name="twitter:title" content="Polarhomes | Cozy Airbnb Rooms Near Jomo Kenyatta International Airport, Nairobi">
+    <meta name="twitter:description" content="Affordable, stylish apartments and rooms in Syokimau near Jomo Kenyatta International Airport. Perfect for travelers and short stays.">
     <meta name="twitter:image" content="https://www.polarhomes.org/img/logo.jpg">
 
     <!-- Schema.org JSON-LD Structured Data -->
@@ -39,7 +39,7 @@
       "@type": "LodgingBusiness",
       "name": "Polarhomes",
       "image": "https://www.polarhomes.org/img/logo.jpg",
-      "description": "Polarhomes offers clean, safe, and affordable Airbnb rooms in Syokimau, near JKIA and Nairobi Expressway.",
+      "description": "Polarhomes offers clean, safe, and affordable Airbnb rooms in Syokimau, near Jomo Kenyatta International Airport and Nairobi Expressway.",
       "address": {
         "@type": "PostalAddress",
         "streetAddress": "Makumbi Park, Syokimau",
@@ -165,14 +165,14 @@
 <!-- Styles -->
 <style>
         .logo-img {
-        width: 90px; /* Adjust size as needed */
+        width: 90px;
         height: 70px;
     }
 
     .fancy-text {
         font-size: 2rem;
         font-weight: bold;
-        color: gold; /* Luxurious golden color */
+        color: gold; 
         text-transform: uppercase;
         letter-spacing: 2px;
         font-family: "Cinzel", serif;
@@ -204,7 +204,7 @@
         <!-- Page Header End -->
 
 
-<!-- Booking Start -->
+<!-- Booking Start 
 <div class="container-fluid booking pb-5 wow fadeIn" data-wow-delay="0.1s">
     <div class="container">
         <form action="https://formspree.io/f/xkgryeaa" method="POST">
@@ -249,7 +249,7 @@
         </form>
     </div>
 </div>
-<!-- Booking End -->
+ Booking End -->
 
   <!-- Service Start -->
 <div class="container-xxl py-5">
