--- a/testimonial.html
+++ b/testimonial.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Polarhomes | Airbnb Testimonials & Guest Reviews in Syokimau near JKIA</title>
+    <title>Polarhomes | Airbnb Testimonials & Guest Reviews in Syokimau near Jomo Kenyatta International Airport</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
         	  <!-- Canonical URL -->
@@ -12,16 +12,16 @@
   <meta name="googlebot" content="index, follow" />
 
     <!-- SEO Meta Tags -->
-    <meta name="title" content="Polarhomes | Airbnb Testimonials & Guest Reviews in Syokimau near JKIA">
-    <meta name="description" content="jkia accomodation, accomodation near jkia, Read real testimonials and honest guest reviews about Polarhomes Airbnb stays near JKIA airport and Nairobi Expressway. See why guests love our clean, secure, and stylish accommodations.">
-    <meta name="keywords" content="jkia accomodation, accomodation near jkia, Polarhomes reviews, Polarhomes testimonials, Airbnb reviews JKIA, guest reviews Syokimau, Nairobi Airbnb feedback, Nairobi airport lodging reviews, short stay reviews Syokimau, Airbnb Kenya experiences, Polarhomes customer experiences, trusted Airbnb Nairobi, Airbnb near Nairobi Expressway, clean Airbnb Syokimau, safe Airbnb Nairobi">
+    <meta name="title" content="Polarhomes | Airbnb Testimonials & Guest Reviews in Syokimau near Jomo Kenyatta International Airport">
+    <meta name="description" content="Jomo Kenyatta International Airport accomodation, accomodation near jkia, Read real testimonials and honest guest reviews about Polarhomes Airbnb stays near JKIA airport and Nairobi Expressway. See why guests love our clean, secure, and stylish accommodations.">
+    <meta name="keywords" content="Jomo Kenyatta International Airport accomodation, accomodation near Jomo Kenyatta International Airport, Polarhomes reviews, Polarhomes testimonials, Airbnb reviews JKIA, guest reviews Syokimau, Nairobi Airbnb feedback, Nairobi airport lodging reviews, short stay reviews Syokimau, Airbnb Kenya experiences, Polarhomes customer experiences, trusted Airbnb Nairobi, Airbnb near Nairobi Expressway, clean Airbnb Syokimau, safe Airbnb Nairobi">
     <meta name="author" content="Polarhomes">
     <meta name="google-site-verification" content="yUXGjPHC7A9fjFIUkm4W5x2CgiMbsLhPFiMZBKniO_E" />
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://www.polarhomes.org/testimonial">
-    <meta property="og:title" content="Polarhomes | Trusted Guest Reviews near JKIA & Nairobi Expressway">
+    <meta property="og:title" content="Polarhomes | Trusted Guest Reviews near Jomo Kenyatta International Airport & Nairobi Expressway">
     <meta property="og:description" content="Discover why travelers love Polarhomes! Authentic reviews from happy Airbnb guests staying near JKIA Airport and Nairobi Expressway.">
     <meta property="og:image" content="https://www.polarhomes.org/img/logo.jpg">
 
@@ -29,7 +29,7 @@
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:url" content="https://www.polarhomes.org/testimonial">
     <meta name="twitter:title" content="Polarhomes | Airbnb Testimonials & Guest Experiences in Nairobi">
-    <meta name="twitter:description" content="Trusted by hundreds of guests – read genuine reviews about Polarhomes Airbnb rooms near JKIA and Nairobi Expressway. Clean, secure, and cozy.">
+    <meta name="twitter:description" content="Trusted by hundreds of guests – read genuine reviews about Polarhomes Airbnb rooms near Jomo Kenyatta International Airport and Nairobi Expressway. Clean, secure, and cozy.">
     <meta name="twitter:image" content="https://www.polarhomes.org/img/logo.jpg">
 
      <!-- Schema.org JSON-LD Structured Data -->
@@ -55,11 +55,11 @@
         "latitude": -1.3308,
         "longitude": 36.9274
       },
-      "description": "Polarhomes offers Airbnb accommodation near JKIA Airport and Nairobi Expressway. Enjoy safe, stylish, and affordable short-term and long-term rentals in Syokimau.",
+      "description": "Polarhomes offers Airbnb accommodation near Jomo Kenyatta International Airport Airport and Nairobi Expressway. Enjoy safe, stylish, and affordable short-term and long-term rentals in Syokimau.",
       "amenityFeature": [
         { "@type": "LocationFeatureSpecification", "name": "Free WiFi", "value": true },
         { "@type": "LocationFeatureSpecification", "name": "Free Parking", "value": true },
-        { "@type": "LocationFeatureSpecification", "name": "Proximity to JKIA Airport", "value": true },
+        { "@type": "LocationFeatureSpecification", "name": "Proximity to Jomo Kenyatta International Airport Airport", "value": true },
         { "@type": "LocationFeatureSpecification", "name": "Fully Furnished Units", "value": true },
         { "@type": "LocationFeatureSpecification", "name": "24/7 Security", "value": true },
         { "@type": "LocationFeatureSpecification", "name": "Close to SGR & Expressway", "value": true }
@@ -167,14 +167,14 @@
 <!-- Styles -->
 <style>
         .logo-img {
-        width: 90px; /* Adjust size as needed */
+        width: 90px;
         height: 70px;
     }
 
     .fancy-text {
         font-size: 2rem;
         font-weight: bold;
-        color: gold; /* Luxurious golden color */
+        color: gold; 
         text-transform: uppercase;
         letter-spacing: 2px;
         font-family: "Cinzel", serif;
@@ -206,7 +206,7 @@
         <!-- Page Header End -->
 
 
-    <!-- Booking Start -->
+    <!-- Booking Start 
 <div class="container-fluid booking pb-5 wow fadeIn" data-wow-delay="0.1s">
     <div class="container">
         <form action="https://formspree.io/f/xkgryeaa" method="POST">
@@ -251,7 +251,7 @@
         </form>
     </div>
 </div>
-<!-- Booking End -->
+ Booking End -->
 
        <!-- Testimonial Start -->
 <div class="container-xxl testimonial my-5 py-5 bg-dark wow zoomIn" data-wow-delay="0.1s">
