--- a/index.html
+++ b/index.html
@@ -350,9 +350,9 @@
                 <h1 class="mb-4">Discover <span class="text-primary text-uppercase">Unforgettable Stays</span></h1>
                <p class="mb-4">
                     Welcome to <strong>Polarhomes</strong>, your gateway to luxurious and memorable stays in Nairobi, Kenya. 
-                    Nestled in the capital city of Kenya, near the Nairobi Expressway, near Jomo Kenyatta International Airport, near SGR and close to major shopping center in Syokimau, we offer a seamless blend of comfort, convenience, and adventure.
+                    Nestled in the capital city of Kenya, near the Nairobi Expressway, <strong>near Jomo Kenyatta International Airport</strong>, <strong>near SGR</strong> and close to <strong>major shopping center in Syokimau</strong>, we offer a seamless blend of comfort, convenience, and adventure.
                     Whether you're looking for a relaxing getaway, a business trip, or a fun family vacation, we provide a 
-                    curated selection of premium accommodations tailored to your needs.
+                    curated selection of <strong>premium accommodations</strong> tailored to your needs.
                 </p>
 		    <div class="row g-3 pb-4">
                     <div class="col-sm-4 wow fadeIn" data-wow-delay="0.1s">
