--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
                 <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
                     <div class="p-3" style="max-width: 700px;">
                         <h6 class="section-title text-white text-uppercase mb-3 animated slideInDown">Scenic Locations</h6>
-                        <h1 class="display-3 text-white mb-4 animated slideInDown">Stay Near Nairobi’s Best Attractions</h1>
+                        <h1 class="display-3 text-white mb-4 animated slideInDown">Stay Near Jomo Kenyatta international airport, sgr and Nairobi express way </h1>
                         <a href="contact" class="btn btn-primary py-md-3 px-md-5 me-3 animated slideInLeft">Contact Us</a>
                         <a href="booking" class="btn btn-light py-md-3 px-md-5 animated slideInRight">Reserve Your Stay</a>
                     </div>
