--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@
     <meta name="twitter:description" content="Stay near Jomo Kenyatta International Airport Airport with Polarhomes Airbnb in Syokimau. Fully furnished, secure, and affordable accommodations for short or long term stays.">
     <meta name="twitter:image" content="https://www.polarhomes.org/img/logo.jpg">
 
+	<!--WEB ANALYTICS-->
+	<script src="https://analytics.ahrefs.com/analytics.js" data-key="OoHrgikleBNnoZo4NnET5g" async></script>
+
     <!-- Schema.org JSON-LD Structured Data -->
     <script type="application/ld+json">
     {
@@ -856,3 +859,4 @@
 </body>
 
 </html>
+
