--- a/index.html
+++ b/index.html
@@ -2,96 +2,94 @@
 <html lang="en">
 
 <head>
-    <meta charset="utf-8">
-    <title>Polarhomes | Jomo Kenyatta International Airport Accommodation | Airbnb in Syokimau Near JKIA & Nairobi Expressway</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="utf-8">
+  <title>Polarhomes | JKIA Accommodation in Nairobi | Airbnb in Syokimau Near Airport</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-	  <!-- Canonical URL -->
-  <link rel="canonical" href="https://www.polarhomes.org/" />
+  <!-- Canonical URL -->
+  <link rel="canonical" href="https://polarhomes.org/" />
 
-    <!-- Primary Meta Tags -->
-    <meta name="title" content="Polarhomes | Jomo Kenyatta International Airport Accommodation | Airbnb in Syokimau Near Airport">
-    <meta name="description" content="Looking for affordable, secure Jomo Kenyatta International Airport accommodation? Polarhomes offers cozy, fully furnished Airbnb rentals near JKIA, SGR, and Nairobi Expressway in Syokimau. Ideal for short or long stays, business travel, and layovers.">
-    <meta name="keywords" content="Jomo Kenyatta International Airport accommodation, Airbnb Jomo Kenyatta International Airport, Syokimau stays, Nairobi airport rooms, Polarhomes, short term rentals Nairobi, Nairobi Expressway Airbnb, SGR Nairobi stay, furnished apartments Nairobi, JKIA airport Airbnb, safe Airbnb Nairobi, business accommodation JKIA, Syokimau lodging, budget Airbnb near JKIA, Nairobi overnight stay, Nairobi guest house near airport">
-    <meta name="author" content="Polarhomes">
-    <meta name="robots" content="index, follow">
-    <meta name="google-site-verification" content="yUXGjPHC7A9fjFIUkm4W5x2CgiMbsLhPFiMZBKniO_E" />
+  <!-- Primary Meta Tags -->
+  <meta name="title" content="Polarhomes | JKIA Airport Accommodation & Airbnb in Nairobi">
+  <meta name="description" content="Stay near Jomo Kenyatta International Airport with Polarhomes Airbnb in Syokimau. Affordable, secure, and stylish rentals near JKIA, SGR, and Nairobi Expressway. Perfect for short stays, business trips, and layovers.">
+  <meta name="keywords" content="JKIA accommodation, Airbnb near JKIA, Nairobi airport rentals, Syokimau stays, furnished apartments Nairobi, budget Airbnb Nairobi, Polarhomes, SGR Nairobi lodging, secure Airbnb Nairobi, Nairobi Expressway stay">
+  <meta name="author" content="Polarhomes">
+  <meta name="robots" content="index, follow">
+  <meta name="google-site-verification" content="yUXGjPHC7A9fjFIUkm4W5x2CgiMbsLhPFiMZBKniO_E" />
 
-    <!-- Open Graph / Facebook -->
-    <meta property="og:type" content="website">
-    <meta property="og:url" content="https://www.polarhomes.org/">
-    <meta property="og:title" content="Polarhomes | Best JKIA Accommodation & Airbnb in Nairobi">
-    <meta property="og:description" content="Book safe and affordable Airbnb near Jomo Kenyatta International Airport. Polarhomes offers clean, stylish rentals in Syokimau near SGR, Nairobi Expressway, and JKIA Airport.">
-    <meta property="og:image" content="https://www.polarhomes.org/img/logo.jpg">
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://polarhomes.org/">
+  <meta property="og:title" content="Polarhomes | Cozy JKIA Accommodation & Airbnb in Nairobi">
+  <meta property="og:description" content="Book affordable, secure Airbnb rentals near Jomo Kenyatta International Airport. Polarhomes in Syokimau offers modern, fully furnished stays close to JKIA, SGR & Nairobi Expressway.">
+  <meta property="og:image" content="https://polarhomes.org/img/logo.jpg">
 
-    <!-- Twitter Meta Tags -->
-    <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:url" content="https://www.polarhomes.org/">
-    <meta name="twitter:title" content="Polarhomes | Cozy Airbnb Accommodation Near JKIA, Nairobi">
-    <meta name="twitter:description" content="Stay near Jomo Kenyatta International Airport Airport with Polarhomes Airbnb in Syokimau. Fully furnished, secure, and affordable accommodations for short or long term stays.">
-    <meta name="twitter:image" content="https://www.polarhomes.org/img/logo.jpg">
+  <!-- Twitter Meta Tags -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:url" content="https://polarhomes.org/">
+  <meta name="twitter:title" content="Polarhomes | Best Airbnb Accommodation Near JKIA, Nairobi">
+  <meta name="twitter:description" content="Stay near Jomo Kenyatta International Airport with Polarhomes. Fully furnished, stylish, and safe Airbnb rentals in Syokimau near JKIA, SGR & Nairobi Expressway.">
+  <meta name="twitter:image" content="https://polarhomes.org/img/logo.jpg">
 
-	<!--WEB ANALYTICS-->
-	<script src="https://analytics.ahrefs.com/analytics.js" data-key="OoHrgikleBNnoZo4NnET5g" async></script>
+  <!-- Web Analytics -->
+  <script src="https://analytics.ahrefs.com/analytics.js" data-key="OoHrgikleBNnoZo4NnET5g" async></script>
 
-    <!-- Schema.org JSON-LD Structured Data -->
-    <script type="application/ld+json">
-    {
-      "@context": "https://schema.org",
-      "@type": "LodgingBusiness",
-      "name": "Polarhomes",
-      "image": "https://www.polarhomes.org/img/logo.jpg",
-      "@id": "https://www.polarhomes.org",
-      "url": "https://www.polarhomes.org",
-      "telephone": "+254723225791",
-      "priceRange": "$$",
-      "address": {
-        "@type": "PostalAddress",
-        "streetAddress": "Syokimau, Nairobi",
-        "addressLocality": "Nairobi",
-        "postalCode": "00100",
-        "addressCountry": "KE"
-      },
-      "geo": {
-        "@type": "GeoCoordinates",
-        "latitude": -1.3308,
-        "longitude": 36.9274
-      },
-      "description": "Polarhomes offers Airbnb accommodation near JKIA Airport and Nairobi Expressway. Enjoy safe, stylish, and affordable short-term and long-term rentals in Syokimau.",
-      "amenityFeature": [
-        { "@type": "LocationFeatureSpecification", "name": "Free WiFi", "value": true },
-        { "@type": "LocationFeatureSpecification", "name": "Free Parking", "value": true },
-        { "@type": "LocationFeatureSpecification", "name": "Proximity to Jomo Kenyatta International Airport", "value": true },
-        { "@type": "LocationFeatureSpecification", "name": "Fully Furnished Units", "value": true },
-        { "@type": "LocationFeatureSpecification", "name": "24/7 Security", "value": true },
-        { "@type": "LocationFeatureSpecification", "name": "Close to SGR & Expressway", "value": true }
-      ]
-    }
-    </script>
+  <!-- Schema.org JSON-LD Structured Data -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "LodgingBusiness",
+    "name": "Polarhomes",
+    "image": "https://polarhomes.org/img/logo.jpg",
+    "@id": "https://polarhomes.org",
+    "url": "https://polarhomes.org",
+    "telephone": "+254723225791",
+    "priceRange": "$$",
+    "address": {
+      "@type": "PostalAddress",
+      "streetAddress": "Syokimau, Nairobi",
+      "addressLocality": "Nairobi",
+      "postalCode": "00100",
+      "addressCountry": "KE"
+    },
+    "geo": {
+      "@type": "GeoCoordinates",
+      "latitude": -1.3308,
+      "longitude": 36.9274
+    },
+    "description": "Polarhomes offers short-term and long-term Airbnb rentals near JKIA Airport. Enjoy affordable, fully furnished, and secure accommodation in Syokimau, Nairobi.",
+    "amenityFeature": [
+      { "@type": "LocationFeatureSpecification", "name": "Free WiFi", "value": true },
+      { "@type": "LocationFeatureSpecification", "name": "Free Parking", "value": true },
+      { "@type": "LocationFeatureSpecification", "name": "Close to JKIA Airport", "value": true },
+      { "@type": "LocationFeatureSpecification", "name": "Fully Furnished Units", "value": true },
+      { "@type": "LocationFeatureSpecification", "name": "24/7 Security", "value": true },
+      { "@type": "LocationFeatureSpecification", "name": "Near SGR & Nairobi Expressway", "value": true }
+    ]
+  }
+  </script>
 
-    <!-- Favicon -->
-    <link href="img/logo.jpg" rel="icon" type="image/x-icon">
+  <!-- Favicon -->
+  <link href="img/logo.jpg" rel="icon" type="image/x-icon">
 
-    <!-- Google Fonts -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Heebo:wght@400;500;600;700&family=Montserrat:wght@400;500;600;700&display=swap" rel="stylesheet">  
+  <!-- Google Fonts -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Heebo:wght@400;500;600;700&family=Montserrat:wght@400;500;600;700&display=swap" rel="stylesheet">  
 
-    <!-- Icon Fonts -->
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css" rel="stylesheet">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css" rel="stylesheet">
+  <!-- Icon Fonts -->
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css" rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css" rel="stylesheet">
 
-    <!-- Library Stylesheets -->
-    <link href="lib/animate/animate.min.css" rel="stylesheet">
-    <link href="lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
-    <link href="lib/tempusdominus/css/tempusdominus-bootstrap-4.min.css" rel="stylesheet" />
+  <!-- Library Stylesheets -->
+  <link href="lib/animate/animate.min.css" rel="stylesheet">
+  <link href="lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
+  <link href="lib/tempusdominus/css/tempusdominus-bootstrap-4.min.css" rel="stylesheet" />
 
-    <!-- Bootstrap and Template Styles -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
-    <link href="css/style.css" rel="stylesheet">
+  <!-- Bootstrap and Template Styles -->
+  <link href="css/bootstrap.min.css" rel="stylesheet">
+  <link href="css/style.css" rel="stylesheet">
 </head>
-
-
 
 <body>
     <div class="container-xxl bg-white p-0">
@@ -859,4 +857,5 @@
 </body>
 
 </html>
+
 
