--- a/about.html
+++ b/about.html
@@ -1,77 +1,74 @@
 <!DOCTYPE html>
 <html lang="en">
 
-    <head>
-    <meta charset="utf-8">
-    <title>Jomo Kenyatta International Airport Accommodation | About Us - Polarhomes Airbnb in Syokimau Nairobi</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+ <head>
+  <meta charset="utf-8">
+  <title>About Polarhomes | Jomo Kenyatta International Airport Accommodation in Nairobi</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <!-- SEO Meta Tags -->
-    <meta name="robots" content="index, follow">
-    <link rel="canonical" href="https://www.polarhomes.org/about">
+  <!-- SEO Meta Tags -->
+  <meta name="robots" content="index, follow, max-snippet:-1, max-image-preview:large, max-video-preview:-1">
+  <link rel="canonical" href="https://polarhomes.org/about">
 
-    <meta name="title" content="JKIA Accommodation | About Polarhomes Airbnb Syokimau">
-    <meta name="description" content="Looking for Jomo Kenyatta International Airport accommodation? Learn more about Polarhomes – your trusted Airbnb near JKIA, SGR, and Nairobi Expressway in Syokimau. Safe, clean, and affordable stays.">
-    <meta name="keywords" content="Jomo Kenyatta International Airport accommodation, Syokimau Airbnb, Nairobi airport stays, SGR Nairobi accommodation, expressway rental, makumbi Airbnb, Polarhomes JKIA, Airbnb Kenya, short-term apartment Nairobi, Polarhomes About Us">
-    <meta name="author" content="Polarhomes">
-    <meta name="google-site-verification" content="yUXGjPHC7A9fjFIUkm4W5x2CgiMbsLhPFiMZBKniO_E" />
+  <meta name="title" content="About Polarhomes | Jomo Kenyatta International Airport Accommodation in Nairobi">
+  <meta name="description" content="Learn more about Polarhomes – trusted Airbnb stays near Jomo Kenyatta International Airport (JKIA), SGR Nairobi, and Expressway. Safe, clean, and affordable accommodation in Syokimau.">
+  <meta name="keywords" content="Jomo Kenyatta International Airport accommodation, Syokimau Airbnb, Nairobi airport stays, SGR Nairobi accommodation, JKIA rentals, Airbnb Kenya, Polarhomes Nairobi, short-term apartments Syokimau">
+  <meta name="author" content="Polarhomes">
+  <meta name="google-site-verification" content="yUXGjPHC7A9fjFIUkm4W5x2CgiMbsLhPFiMZBKniO_E" />
 
-    <!-- Open Graph / Facebook -->
-    <meta property="og:type" content="website">
-    <meta property="og:url" content="https://www.polarhomes.org/about">
-    <meta property="og:title" content="Jomo Kenyatta International Airport Accommodation | About Polarhomes Airbnb Syokimau">
-    <meta property="og:description" content="Discover Polarhomes – Safe and stylish Airbnb options near JKIA and Nairobi Expressway. Learn more about us and why travelers trust our accommodations.">
-    <meta property="og:image" content="https://www.polarhomes.org/img/logo.jpg">
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://polarhomes.org/about">
+  <meta property="og:title" content="About Polarhomes | Trusted JKIA Accommodation in Nairobi">
+  <meta property="og:description" content="Polarhomes offers safe and stylish Airbnb stays near Jomo Kenyatta International Airport, SGR Nairobi, and the Expressway. Learn more about us.">
+  <meta property="og:image" content="https://polarhomes.org/img/logo.jpg">
+  <meta property="og:site_name" content="Polarhomes">
 
-    <!-- Twitter Meta Tags -->
-    <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:url" content="https://www.polarhomes.org/about">
-    <meta name="twitter:title" content="About Polarhomes | Trusted Jomo Kenyatta International Airport Accommodation in Nairobi">
-    <meta name="twitter:description" content="Meet the team behind Polarhomes – premium Airbnb service near JKIA. Convenient for airport travelers, SGR passengers, and business guests.">
-    <meta name="twitter:image" content="https://www.polarhomes.org/img/logo.jpg">
+  <!-- Twitter Meta Tags -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:url" content="https://polarhomes.org/about">
+  <meta name="twitter:title" content="About Polarhomes | Nairobi JKIA Accommodation">
+  <meta name="twitter:description" content="Meet the team behind Polarhomes – premium Airbnb service near JKIA, SGR, and Expressway in Syokimau Nairobi.">
+  <meta name="twitter:image" content="https://polarhomes.org/img/logo.jpg">
 
-    <!-- Schema.org JSON-LD Structured Data -->
-    <script type="application/ld+json">
-    {
-      "@context": "https://schema.org",
-      "@type": "AboutPage",
-      "name": "About Polarhomes | Jomo Kenyatta International Airport Accommodation",
-      "url": "https://www.polarhomes.org/about",
-      "description": "Polarhomes offers reliable Airbnb stays near Jomo Kenyatta International Airport Airport, SGR, and the Nairobi Expressway. Learn about our mission and hospitality promise.",
-      "publisher": {
-        "@type": "Organization",
-        "name": "Polarhomes",
-        "url": "https://www.polarhomes.org/",
-        "logo": {
-          "@type": "ImageObject",
-          "url": "https://www.polarhomes.org/img/logo.jpg"
-        }
+  <!-- Schema.org JSON-LD Structured Data -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "AboutPage",
+    "name": "About Polarhomes | JKIA Accommodation",
+    "url": "https://polarhomes.org/about",
+    "description": "Polarhomes offers reliable Airbnb stays near Jomo Kenyatta International Airport, SGR Nairobi, and the Expressway. Learn about our mission and hospitality promise.",
+    "publisher": {
+      "@type": "Organization",
+      "name": "Polarhomes",
+      "url": "https://polarhomes.org/",
+      "logo": {
+        "@type": "ImageObject",
+        "url": "https://polarhomes.org/img/logo.jpg"
       }
     }
-    </script>
+  }
+  </script>
 
-    <!-- Favicon -->
-    <link href="img/logo.jpg" rel="icon" type="image/x-icon">
+  <!-- Favicon -->
+  <link href="/img/logo.jpg" rel="icon" type="image/x-icon">
 
-    <!-- Google Web Fonts -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Heebo:wght@400;500;600;700&family=Montserrat:wght@400;500;600;700&display=swap" rel="stylesheet">  
+  <!-- Google Fonts -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Heebo:wght@400;500;600;700&family=Montserrat:wght@400;500;600;700&display=swap" rel="stylesheet">  
 
-    <!-- Icon Font Stylesheet -->
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css" rel="stylesheet">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css" rel="stylesheet">
+  <!-- CSS Libraries -->
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css" rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css" rel="stylesheet">
+  <link href="lib/animate/animate.min.css" rel="stylesheet">
+  <link href="lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
+  <link href="lib/tempusdominus/css/tempusdominus-bootstrap-4.min.css" rel="stylesheet" />
 
-    <!-- Libraries Stylesheet -->
-    <link href="lib/animate/animate.min.css" rel="stylesheet">
-    <link href="lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
-    <link href="lib/tempusdominus/css/tempusdominus-bootstrap-4.min.css" rel="stylesheet" />
-
-    <!-- Customized Bootstrap Stylesheet -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
-
-    <!-- Template Stylesheet -->
-    <link href="css/style.css" rel="stylesheet">
+  <!-- Core Styles -->
+  <link href="css/bootstrap.min.css" rel="stylesheet">
+  <link href="css/style.css" rel="stylesheet">
 </head>
 
 <body>
@@ -535,3 +532,4 @@
 </body>
 
 </html>
+
