--- a/booking.html
+++ b/booking.html
@@ -2,114 +2,87 @@
 <html lang="en">
 
 <head>
-    <meta charset="utf-8">
-    <title>JKIA Accommodation Booking | Polarhomes Airbnb Nairobi Syokimau</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="utf-8">
+  <title>Book JKIA Accommodation | Polarhomes Airbnb Nairobi Syokimau</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <!-- SEO Meta Tags -->
-    <meta name="robots" content="index, follow">
-    <link rel="canonical" href="https://www.polarhomes.org/booking">
+  <!-- SEO Meta Tags -->
+  <meta name="robots" content="index, follow, max-snippet:-1, max-image-preview:large, max-video-preview:-1">
+  <link rel="canonical" href="https://polarhomes.org/booking">
 
-    <meta name="title" content="Jomo Kenyatta International Airport Accommodation Booking | Polarhomes Airbnb Nairobi Syokimau">
-    <meta name="description" content="Secure Jomo Kenyatta International Airport accommodation with Polarhomes – book fully-furnished, stylish Airbnb apartments in Syokimau, near SGR, Expressway, and Nairobi Airport. Best for layovers, business, or travel.">
-    <meta name="keywords" content="Jomo Kenyatta International Airport accommodation, accommodation near Jomo Kenyatta International Airport, book Airbnb Jomo Kenyatta International Airport, Syokimau Airbnb, Nairobi Expressway stay, SGR accommodation, Nairobi airport apartment, Polarhomes booking, Kenya Airbnb, airport hotel alternative, expressway apartment, JKIA short stay">
-    <meta name="author" content="Polarhomes">
-    <meta name="google-site-verification" content="yUXGjPHC7A9fjFIUkm4W5x2CgiMbsLhPFiMZBKniO_E" />
+  <meta name="title" content="Book JKIA Accommodation | Polarhomes Airbnb Nairobi Syokimau">
+  <meta name="description" content="Book secure and stylish Airbnb apartments near Jomo Kenyatta International Airport (JKIA), SGR Nairobi, and Expressway with Polarhomes. Perfect for layovers, business trips, or short stays.">
+  <meta name="keywords" content="JKIA accommodation, Jomo Kenyatta International Airport stay, book Airbnb Nairobi airport, Syokimau Airbnb, SGR Nairobi rental, Nairobi Expressway apartments, Polarhomes booking, short-term rental JKIA">
+  <meta name="author" content="Polarhomes">
+  <meta name="google-site-verification" content="yUXGjPHC7A9fjFIUkm4W5x2CgiMbsLhPFiMZBKniO_E" />
 
-    <!-- Open Graph / Facebook -->
-    <meta property="og:type" content="website">
-    <meta property="og:url" content="https://www.polarhomes.org/booking">
-    <meta property="og:title" content="Book Accommodation near Jomo Kenyatta International Airport Nairobi | Polarhomes accomodation">
-    <meta property="og:description" content="Easily book secure and affordable Jomo Kenyatta International Airport accommodation near Nairobi Expressway & Syokimau. Trusted Airbnb provider – Polarhomes.">
-    <meta property="og:image" content="https://www.polarhomes.org/img/logo.jpg">
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://polarhomes.org/booking">
+  <meta property="og:title" content="Book JKIA Accommodation | Polarhomes Nairobi">
+  <meta property="og:description" content="Easily book secure and affordable stays near JKIA, SGR Nairobi, and Syokimau with Polarhomes – trusted Airbnb provider in Nairobi.">
+  <meta property="og:image" content="https://polarhomes.org/img/logo.jpg">
+  <meta property="og:site_name" content="Polarhomes">
 
-    <!-- Twitter Meta Tags -->
-    <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:url" content="https://www.polarhomes.org/booking">
-    <meta name="twitter:title" content="Jomo Kenyatta International Airport Accommodation | Polarhomes Booking Page">
-    <meta name="twitter:description" content="Book a modern, fully-furnished apartment near Jomo Kenyatta International Airport Nairobi through Polarhomes. Ideal short stays, long stays, and transit bookings.">
-    <meta name="twitter:image" content="https://www.polarhomes.org/img/logo.jpg">
+  <!-- Twitter Meta Tags -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:url" content="https://polarhomes.org/booking">
+  <meta name="twitter:title" content="Book JKIA Accommodation | Polarhomes Nairobi">
+  <meta name="twitter:description" content="Book fully-furnished apartments near JKIA Airport Nairobi with Polarhomes. Great for short stays, long stays, and business travel.">
+  <meta name="twitter:image" content="https://polarhomes.org/img/logo.jpg">
 
-    <!-- Schema.org JSON-LD Structured Data -->
-    <script type="application/ld+json">
-    {
-      "@context": "https://schema.org",
-      "@type": "WebPage",
-      "name": "JKIA Accommodation Booking | Polarhomes",
-      "url": "https://www.polarhomes.org/booking",
-      "description": "Book stylish, secure, and affordable Airbnb apartments near JKIA Airport, Nairobi Expressway, and Syokimau with Polarhomes.",
-      "mainEntity": {
-        "@type": "LodgingReservation",
-        "reservationFor": {
-          "@type": "LodgingBusiness",
-          "name": "Polarhomes",
-          "address": {
-            "@type": "PostalAddress",
-            "streetAddress": "Syokimau",
-            "addressLocality": "Nairobi",
-            "postalCode": "00100",
-            "addressCountry": "KE"
-          }
-        },
-        "underName": {
-          "@type": "Organization",
-          "name": "Polarhomes"
-        },
-        "provider": {
-          "@type": "Organization",
-          "name": "Polarhomes",
-          "url": "https://www.polarhomes.org"
+  <!-- Schema.org JSON-LD Structured Data -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "WebPage",
+    "name": "JKIA Accommodation Booking | Polarhomes",
+    "url": "https://polarhomes.org/booking",
+    "description": "Book stylish, secure, and affordable Airbnb apartments near JKIA Airport, Nairobi Expressway, and Syokimau with Polarhomes.",
+    "mainEntity": {
+      "@type": "LodgingReservation",
+      "reservationFor": {
+        "@type": "LodgingBusiness",
+        "name": "Polarhomes",
+        "address": {
+          "@type": "PostalAddress",
+          "streetAddress": "Syokimau",
+          "addressLocality": "Nairobi",
+          "postalCode": "00100",
+          "addressCountry": "KE"
         }
+      },
+      "provider": {
+        "@type": "Organization",
+        "name": "Polarhomes",
+        "url": "https://polarhomes.org"
       }
     }
-    </script>
+  }
+  </script>
 
-    <!-- Favicon -->
-    <link href="img/logo.jpg" rel="icon" type="image/x-icon">
+  <!-- Favicon -->
+  <link href="/img/logo.jpg" rel="icon" type="image/x-icon">
 
-    <!-- Google Web Fonts -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Heebo:wght@400;500;600;700&family=Montserrat:wght@400;500;600;700&display=swap" rel="stylesheet">  
+  <!-- Google Web Fonts -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Heebo:wght@400;500;600;700&family=Montserrat:wght@400;500;600;700&display=swap" rel="stylesheet">  
 
-    <!-- Icon Font Stylesheet -->
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css" rel="stylesheet">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css" rel="stylesheet">
+  <!-- Icon Font Stylesheet -->
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css" rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css" rel="stylesheet">
 
-    <!-- Libraries Stylesheet -->
-    <link href="lib/animate/animate.min.css" rel="stylesheet">
-    <link href="lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
-    <link href="lib/tempusdominus/css/tempusdominus-bootstrap-4.min.css" rel="stylesheet" />
+  <!-- Libraries Stylesheet -->
+  <link href="lib/animate/animate.min.css" rel="stylesheet">
+  <link href="lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
+  <link href="lib/tempusdominus/css/tempusdominus-bootstrap-4.min.css" rel="stylesheet" />
 
-    <!-- Customized Bootstrap Stylesheet -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
+  <!-- Customized Bootstrap Stylesheet -->
+  <link href="css/bootstrap.min.css" rel="stylesheet">
 
-    <!-- Template Stylesheet -->
-    <link href="css/style.css" rel="stylesheet">
-</head>
-
-    <!-- Favicon -->
-    <link href="img/logo.jpg" rel="icon" type="image/x-icon">
-
-    <!-- Google Web Fonts -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Heebo:wght@400;500;600;700&family=Montserrat:wght@400;500;600;700&display=swap" rel="stylesheet">  
-
-    <!-- Icon Font Stylesheet -->
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css" rel="stylesheet">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css" rel="stylesheet">
-
-    <!-- Libraries Stylesheet -->
-    <link href="lib/animate/animate.min.css" rel="stylesheet">
-    <link href="lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
-    <link href="lib/tempusdominus/css/tempusdominus-bootstrap-4.min.css" rel="stylesheet" />
-
-    <!-- Customized Bootstrap Stylesheet -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
-
-    <!-- Template Stylesheet -->
-    <link href="css/style.css" rel="stylesheet">
+  <!-- Template Stylesheet -->
+  <link href="css/style.css" rel="stylesheet">
 </head>
 
 <body>
@@ -543,3 +516,4 @@
 </body>
 
 </html>
+
