--- a/contact.html
+++ b/contact.html
@@ -2,87 +2,87 @@
 <html lang="en">
 
 <head>
-    <meta charset="utf-8">
-    <title>Contact Polarhomes | Airbnb Syokimau near Jomo Kenyatta International Airport| accomodation Jomo Kenyatta International Airport | Jomo Kenyatta International Airport accomodation</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="utf-8">
+  <title>Contact Polarhomes | Airbnb Near JKIA Nairobi & Syokimau</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <!-- SEO Meta Tags -->
-    <meta name="robots" content="index, follow">
-    <link rel="canonical" href="https://www.polarhomes.org/contact">
-    <meta name="title" content="Contact Polarhomes | Airbnb Syokimau near JKIA |jkia accomodation">
-    <meta name="description" content="Jomo Kenyatta International Airport accomodation, accomodation near Jomo Kenyatta International Airport, Get in touch with Polarhomes for secure, affordable, and fully-furnished Airbnb rentals near JKIA, Syokimau, and the Nairobi Expressway. We're here to assist with your booking or inquiries.">
-    <meta name="keywords" content="accomodation near Jomo Kenyatta International Airport, Jomo Kenyatta International Airport accomodation, sgr accomodation, expressway accomodation, contact Polarhomes, Airbnb Syokimau contact, JKIA Airbnb host, Polar homes Kenya, Nairobi Airbnb contact, book Airbnb JKIA, reach Polarhomes, Airbnb Kenya customer care, furnished rental support, Airbnb Nairobi Expressway host, Polarhomes phone number">
-    <meta name="author" content="Polarhomes, antocapteknologies">
-    <meta name="google-site-verification" content="yUXGjPHC7A9fjFIUkm4W5x2CgiMbsLhPFiMZBKniO_E" />
+  <!-- SEO Meta Tags -->
+  <meta name="robots" content="index, follow, max-snippet:-1, max-image-preview:large, max-video-preview:-1">
+  <link rel="canonical" href="https://polarhomes.org/contact">
+  
+  <meta name="title" content="Contact Polarhomes | Airbnb Near JKIA Nairobi & Syokimau">
+  <meta name="description" content="Get in touch with Polarhomes for bookings and inquiries. Secure, affordable, fully-furnished Airbnb apartments near JKIA Nairobi, Syokimau, and the Expressway.">
+  <meta name="keywords" content="contact Polarhomes, Airbnb near JKIA Nairobi, Syokimau Airbnb, Nairobi airport accommodation, furnished rentals near JKIA, book Airbnb Nairobi, JKIA short stays">
+  <meta name="author" content="Polarhomes">
 
-    <!-- Open Graph / Facebook -->
-    <meta property="og:type" content="website">
-    <meta property="og:url" content="https://www.polarhomes.org/contact">
-    <meta property="og:title" content="Contact Polarhomes | Airbnb Near Jomo Kenyatta International Airport & Nairobi Expressway">
-    <meta property="og:description" content="Reach out to Polarhomes for assistance, bookings, or Airbnb inquiries in Nairobi, Syokimau, or near JKIA.">
-    <meta property="og:image" content="https://www.polarhomes.org/img/logo.jpg">
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://polarhomes.org/contact">
+  <meta property="og:title" content="Contact Polarhomes | Airbnb Near JKIA Nairobi & Syokimau">
+  <meta property="og:description" content="Reach out to Polarhomes for bookings or inquiries. Airbnb apartments near JKIA Nairobi, Syokimau, and Nairobi Expressway.">
+  <meta property="og:image" content="https://polarhomes.org/img/logo.jpg">
+  <meta property="og:site_name" content="Polarhomes">
 
-    <!-- Twitter Meta Tags -->
-    <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:url" content="https://www.polarhomes.org/contact">
-    <meta name="twitter:title" content="Contact Polarhomes | Airbnb Near Jomo Kenyatta International Airport & Nairobi Expressway">
-    <meta name="twitter:description" content="Contact us today to book or inquire about Airbnb stays in Syokimau and around Jomo Kenyatta International Airport.">
-    <meta name="twitter:image" content="https://www.polarhomes.org/img/logo.jpg">
+  <!-- Twitter Meta Tags -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:url" content="https://polarhomes.org/contact">
+  <meta name="twitter:title" content="Contact Polarhomes | Airbnb Near JKIA Nairobi & Syokimau">
+  <meta name="twitter:description" content="Book or inquire about Airbnb stays near JKIA Nairobi and Syokimau with Polarhomes.">
+  <meta name="twitter:image" content="https://polarhomes.org/img/logo.jpg">
 
-    <!-- Schema.org JSON-LD Structured Data -->
-    <script type="application/ld+json">
-    {
-      "@context": "https://schema.org",
-      "@type": "ContactPage",
-      "name": "Contact Polarhomes",
-      "url": "https://polarhomes.org/contact",
-      "mainEntity": {
-        "@type": "Organization",
-        "name": "Polarhomes",
-        "url": "https://www.polarhomes.org/",
-        "logo": "https://www.polarhomes.org/img/logo.jpg",
-        "contactPoint": {
-          "@type": "ContactPoint",
-          "telephone": "+254723225791",
-          "contactType": "Customer Service",
-          "areaServed": "KE",
-          "availableLanguage": ["English", "Swahili"]
-        },
-        "address": {
-          "@type": "PostalAddress",
-          "streetAddress": "Syokimau, Nairobi",
-          "addressLocality": "Nairobi",
-          "postalCode": "00100",
-          "addressCountry": "KE"
-        }
+  <!-- Schema.org JSON-LD Structured Data -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "ContactPage",
+    "name": "Contact Polarhomes",
+    "url": "https://polarhomes.org/contact",
+    "mainEntity": {
+      "@type": "Organization",
+      "name": "Polarhomes",
+      "url": "https://polarhomes.org/",
+      "logo": "https://polarhomes.org/img/logo.jpg",
+      "contactPoint": {
+        "@type": "ContactPoint",
+        "telephone": "+254723225791",
+        "contactType": "Customer Service",
+        "areaServed": "KE",
+        "availableLanguage": ["English", "Swahili"]
+      },
+      "address": {
+        "@type": "PostalAddress",
+        "streetAddress": "Syokimau, Nairobi",
+        "addressLocality": "Nairobi",
+        "postalCode": "00100",
+        "addressCountry": "KE"
       }
     }
-    </script>
+  }
+  </script>
 
-    <!-- Favicon -->
-    <link href="img/logo.jpg" rel="icon" type="image/x-icon">
+  <!-- Favicon -->
+  <link href="/img/logo.jpg" rel="icon" type="image/x-icon">
 
-    <!-- Google Web Fonts -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Heebo:wght@400;500;600;700&family=Montserrat:wght@400;500;600;700&display=swap" rel="stylesheet">  
+  <!-- Google Web Fonts -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Heebo:wght@400;500;600;700&family=Montserrat:wght@400;500;600;700&display=swap" rel="stylesheet">  
 
-    <!-- Icon Font Stylesheet -->
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css" rel="stylesheet">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css" rel="stylesheet">
+  <!-- Icon Font Stylesheet -->
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css" rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css" rel="stylesheet">
 
-    <!-- Libraries Stylesheet -->
-    <link href="lib/animate/animate.min.css" rel="stylesheet">
-    <link href="lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
-    <link href="lib/tempusdominus/css/tempusdominus-bootstrap-4.min.css" rel="stylesheet" />
+  <!-- Libraries Stylesheet -->
+  <link href="lib/animate/animate.min.css" rel="stylesheet">
+  <link href="lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
+  <link href="lib/tempusdominus/css/tempusdominus-bootstrap-4.min.css" rel="stylesheet" />
 
-    <!-- Customized Bootstrap Stylesheet -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
+  <!-- Customized Bootstrap Stylesheet -->
+  <link href="css/bootstrap.min.css" rel="stylesheet">
 
-    <!-- Template Stylesheet -->
-    <link href="css/style.css" rel="stylesheet">
+  <!-- Template Stylesheet -->
+  <link href="css/style.css" rel="stylesheet">
 </head>
-
 
 <body>
     <div class="container-xxl bg-white p-0">
@@ -464,3 +464,4 @@
 </body>
 
 </html>
+
